--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <!DOCTYPE html>
     <html lang="en">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="home(1).css">
 
     <head>
         <meta charset="UTF-8">
