--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
     <!DOCTYPE html>
     <html lang="en">
-    <link rel="stylesheet" href="home(1).css">
+    <link rel="stylesheet" href="main.css">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>PsychUp | Home </title>
     </head>
 
     <body>
