--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
             <div class="logoparent">
             <div class="logo">
-                <img src="logopic.png" class="logopic">
+                <img src="logopicc.png" class="logopic">
                 <h2 class="logoname">
                         Psych<span style="color: #6944e1;">U</span><span style="color: #831fe3;">p</span>
                 </h2>
