--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
         
         </nav>
         </div>
+
+        <div class="parent-intro">
+        <aside class="tagline">
+            Invest in Your <br> <span style="color: #6944e1;"> Inner Peace</span> 
+        </aside>
+        <div class="subtag">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates optio, laudantium neque natus enim suscipit. Aperiam cumque sint facilis rerum quis architecto nulla facere, totam suscipit repudiandae libero ratione esse.
+        </div>
+        
+   </div>
         <br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
