--- a/appointment.html
+++ b/appointment.html
@@ -12,9 +12,9 @@
             <div class="logo">psychUp</div>
             <nav class="navbar">
 
-                <a href="homepage.html#home">home</a>
-                <a href="homepage.html#services">services</a>
-                <a href="homepage.html#aboutus">about</a>
+                <a href="index.html#home">home</a>
+                <a href="index.html#services">services</a>
+                <a href="index.html#aboutus">about</a>
                 <a href="#contact">contact</a>
                 
             </nav>
@@ -122,7 +122,7 @@
             }
             notif.innerHTML += '<br><br><h2>We are sending your appointment application, this will take some time.</h2>'
             notif.innerHTML += '<br><h2>The PsychUp Assessment Center will inform you through call about your appointment.</h2>';
-            notif.innerHTML += '<br><br><h2 class="remaining-time">Note: Appointment website will close after 1 minute. <br> You can just take a screenshot to have a copy, Thankyou.</h2>';
+            notif.innerHTML += '<br><br><h2 class="remaining-time">Note: Appointment website will close after 1 minute. <br> You can just take a screenshot to have a copy. Thank you.</h2>';
             document.querySelector('.outer-notif').classList.add('show-notif');
             setTimeout(close, 60000);
             var remainingTime  =document.getElementsByClassName("remaining-time");
